fix: images don't overlap anymore on mobile version (services module)

--- a/src/components/Landing/Services/Services.module.scss
+++ b/src/components/Landing/Services/Services.module.scss
@@ -20,7 +20,8 @@
   grid-template-columns: 40% 50%;
   grid-gap: 10%;
   width: 100%;
-  padding-bottom: $padding-containers;
+  margin-bottom: 3em;
+  margin-top: 3em;
 }
 .service_container:nth-child(even) {
   direction: rtl;
